# rust-lambda-cloudtrail

./: .gitignore  Cargo.nix  Cargo.toml  Dockerfile.dapper  Makefile  README.md  dapper.sh  flake.nix
src/: main.rs
